# DraftVerifyBench

./: .gitignore  README.md  pyproject.toml  requirements.txt
application/: draftverify_do_not_say.md  draftverify_interview_talking_points.md  draftverify_oss_readiness_audit.md  draftverify_project_summary_100.md  draftverify_project_summary_250.md  draftverify_project_summary_500.md  draftverify_resume_bullets.md  draftverify_strict_reviewer_audit.md
configs/: ablation_gpu.yaml  ablation_local.yaml  adaptive_gpu.yaml  adaptive_local.yaml  benchmark_grid.yaml  gpu_llama_1b_8b.yaml  gpu_llama_full_static.yaml  gpu_llama_full_static_seed43.yaml  gpu_llama_reduced.yaml  gpu_llama_reduced_repeats.yaml  gpu_qwen_full_static.yaml  gpu_qwen_full_static_seed43.yaml  gpu_qwen_reduced_repeats.yaml  gpu_smoke.yaml  local_medium.yaml  local_small.yaml  router_gpu.yaml  router_local.yaml
docs/: A100_Qwen_Llama_Validation_Report.md  CLI_Reference.md  DraftVerifyBench_Report.md  GH200_Final_Showcase_Report.md  GPU_Runbook.md  GPU_Tradeoff_Decomposition.md  GPU_Validation_Runbook.md  GitHub_Showcase_Checklist.md  Installation.md  Next_GPU_Experiments.md  OSS_PR_Plan.md  Public_Writeup_Draft.md  Quickstart.md  Result_Schema.md  Router_Validation_Report.md  Serving_Integration_Notes.md
draftverifybench/: __init__.py  adaptive.py  analysis.py  cli.py  config.py  datasets.py  decoding.py  init.py  metrics.py  models.py  routing.py  runner.py  speculative.py  utils.py
examples/: quickstart_config.yaml  quickstart_prompts.jsonl
paper/: TEMPLATE_NOTE.md  arxiv_submission_checklist.md  (+3 more)
(+74 files in other folders)
