[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draftverifybench"
version = "0.1.0"
description = "Local benchmark for speculative decoding speedups and slowdowns."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "accelerate",
  "datasets",
  "pandas",
  "numpy",
  "tqdm",
  "matplotlib",
  "pydantic",
  "pyyaml",
  "pytest",
  "ruff",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
draftverifybench = "draftverifybench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["draftverifybench*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
